<resources>
    <string name="app_name">Опросник Леонгарда-Шмишека</string>
    <string name="hyperthymicity">Название этого типа происходит от слова «тимус» − настроение, фон которого постоянно повышен: активный, энергичный, оптимистический, с высоким жизненным тонусом.

Добр, отзывчив, беззаботен. Отличается разговорчивостью, «умственной подвижностью», склонностью к остроумным выходкам. Из-за неустойчивости внимания и недостаточного упорства его интересы поверхностны.

Не терпит стеснения свободы. Плохо переносит критику в свой адрес. Находчив, умеет приспосабливаться к трудностям. Бурно переживает неудачи, но они не выбивают его из колеи. К правилам и обязанностям относится легкомысленно.

Тяготится одиночеством. Неразборчив в выборе знакомств. Быстро устает от привычного круга общения, ищет новые компании, легко адаптируется в незнакомом обществе. В группе стремится быть лидером.

Его эмоции просты, естественны и понятны окружающим. Приподнятое, радостное настроение лишь изредка нарушается вспышками раздражительности (например, в семейном кругу, где нет отвлекающего оживленного общества или сдерживающего влияния начальства).
    </string>

    <string name="dysthymicity">Дистимность выражается в постоянном пониженном настроении, заторможенности психических и моторных актов. В обществе такие люди почти не участвуют в беседе, лишь изредка вставляют замечания после длительных пауз. Для них характерна робость и нерешительность. Серьезная настроенность выдвигает на передний план тонкие, возвышенные чувства, не совместимые с человеческим эгоизмом, ведет к формированию твердой этической позиции.
    </string>

    <string name="cyclothymicity">Такие люди не склонны противопоставлять себя другим, не считают себя лучше. Как правило, они реалисты и терпимо относятся к недостаткам окружающих. У них могут быть резкие вспышки, когда они сердятся, но при этом напряжение и злоба не проявляются, быстро успокоившись, они никого не успевают обидеть.

В периоды подъема они общительны и приветливы, легко знакомятся с новыми людьми и находят со всеми общий язык.

В период спада весь мир может быть окрашен в мрачные тона, из оптимистов они превращаются в пессимистов, мрачно переживающих даже мелкие неудачи. В такие моменты циклотимные личности избегают любых контактов (не звонят друзьям, отказываются от приглашений на вечеринки, стараются проводить время дома и в одиночестве). С трудом засыпают, аппетит может быть снижен или отсутствовать. Настроение бывает хуже с утра, при этом наблюдается упадок сил и общая «вялость».

Тем не менее, такие люди, как правило, знают, что период спада все равно закончится, и у них впереди – возвращение к увлечениям и привязанностям: жизнь напоминает зебру – черные полосы чередуются с белыми.
    </string>

    <string name="excitability">Возбудимость связана, прежде всего, с повышенной реактивностью нервной системы, импульсивностью, склонностью к необдуманным поступкам.

Слова и действия окружающих, воздействия внешних обстоятельств вызывают у возбудимого человека столь сильные впечатления, что мышление не успевает их всесторонне оценить и найти оптимальный вариант реагирования. У возбудимой личности затруднено восприятие чужих мыслей, поэтому часто приходится прибегать к долгим и детальным объяснениям, для того чтобы добиться понимания с ее стороны.

Возбудимая личность часто выражает недовольство, проявляет раздражительность, резкость и грубость в ответ на критику, на ущемление личных интересов и потребностей. В состоянии крайнего аффекта возбудимый человек может проявлять не только словесную, но и физическую агрессию, о чем потом нередко сожалеет. Многие из таких людей прямо утверждают, что в состоянии запальчивости не способны сдерживаться, другие говорят об этом не так откровенно, но самих фактов не отрицают.

Нередко слишком возбудимые люди неразборчивы в еде и питье, часто становятся «героическими» алкоголиками, рано начинают половую жизнь.

Такие люди часто угрюмы на вид. На вопросы отвечают крайне скупо. Неумение управлять собой приводит к многочисленным конфликтам.
    </string>

    <string name="jamming">Характеризуется склонностью долго переживать сильные чувства: обиду, гнев, страх, особенно, когда они не были выражены в реальной жизни из-за каких-либо внешних обстоятельств. Эти чувства могут не затухать или вспыхивать с новой силой спустя недели, месяцы, даже годы. Свои успехи человек с данным типом акцентуации может переживать тоже довольно долго и ярко. Самыми распространенными поводами для застревания являются: ревность, зависть, несправедливость, непризнанные инициативы или изобретения.

Настойчивый, упорный человек, противится изменениям, трудно переключается на другую ситуацию в процессе деятельности. Остро реагирует на несправедливость (действительную и мнимую), часто проявляет недоверчивость.

Этому типу свойственно честолюбие, которое может проявляться, как положительная черта (успехи достигаются усердием), и как отрицательная черта (если честолюбие удовлетворяется принижением других людей или использованием их в своих интересах).

Отличается выдающимися достижениями в различных областях, так как искренне и с увлечением ищет удовлетворения от осуществления своих личных планов. Стремится превзойти других, при этом ему нужно реальное уважение и признание окружающих, которых он пытается добиться любым путем.
    </string>

    <string name="emotivity">Глубоко и долго переживает жизненные впечатления, эпизоды взаимных отношений как позитивного, так и негативного содержания.

Отличается отзывчивостью, гуманным отношением к миру, мягкостью и душевной теплотой. Более тонко реагирует на происходящие события, чем другие люди: легко поддается чувству жалости и сострадания, быстрее, чем кто-либо, испытывает особую радость от общения.

Ярко особенностью эмотивной личности является проницательность. Развитая интуиция позволяет ей почти безошибочно определять отношение к себе окружающих. Ответная реакция возникает незамедлительно и открыто, что отчетливо выражается в мимике. У эмотивной личности легко появляются слезы радости, растроганности. Как правило, ее глубоко захватывают чувства при рассказе о фильме, понравившейся книге, причем такой способ реагирования характерен как мужчинам, так и женщинам.

На эмотивную личность воздействие оказывает только само событие, она не может «заразиться» весельем или печальным настроением без причины. Душевное потрясение может оказать сильное воздействие и вызвать депрессию, при этом тяжесть депрессии соответствует тяжести события.
    </string>

    <string name="exaltation">Людей этого типа отличает высокая пластичность, скорость протекания психических процессов. Они интенсивно реагируют на любые (даже незначительные) события, впадая при этом то в депрессию, то в эйфорические крайности – от самого мрачного до самого мечтательного и счастливого состояния.

Маленькие победы вызывают бурю восторга, любая неудача способна «вывести из строя». Даже незначительный страх охватывает всю натуру экзальтированного человека, при этом заметны физиологические проявления: дрожь, холодный пот и тому подобное.

Экзальтация чаще мотивируется альтруистическими, чем эгоистическими побуждениями. Привязанность к близким друзьям, радость за них, за их удачи могут быть чрезвычайно сильными.

Кроме того, у экзальтированных людей наблюдаются восторженные порывы, не связанные с сугубо личными отношениями. Чувство сострадания к несчастным людям, животным способно довести их до отчаяния.
    </string>

    <string name="anxiety">Тревожный тип отличается ощущением беспокойства, внутренней напряженности, склонен ожидать неприятности. Для данного типа характерны постоянные сомнения в правильности своих поступков и мыслей, стремление сглаживать и избегать конфликтов любой ценой.

Тревожность выражается в мнительности, чувстве обеспокоенности, не имеющем под собой видимых причин, но вызываемом внутренними коллизиями. Тревожные люди проявляют повышенную боязливость с детства – боятся засыпать в темноте или в одиночестве, испытывают страх перед собаками, грозой, сторонятся других детей, потому что они могут их дразнить. От нападений они предпочитают не защищаться, поэтому часто становятся мишенями для шуток или «козлами отпущения» в группе.

Во взрослой жизни страх поглощает такого человека меньше, чем ребенка. Окружающие люди не представляются ему столь угрожающими, поэтому их тревожность не столь бросается в глаза. Но остается неспособность отстаивать свою позицию в спорах, особенно в ситуациях, когда противник показывает силу. Поэтому у таких людей могут наблюдаться проявления робости, иногда покорности и униженности.

В ряде случаев тревожные люди компенсируют свою неуверенность путем самоуверенного и даже дерзкого поведения, однако такие реакции чаще всего возникают только в экстремальных ситуациях, когда нет возможности воспользоваться другими способами защиты своего «Я».
    </string>

    <string name="pedantry">Отличается преувеличенной приверженностью к определенному порядку. Обычно жестко следует плану, а при его нарушении испытывает раздражение. Противится изменениям, так как ему трудно переключаться на что-либо новое. Придает большое значение внешней стороне дела и мелочам, требует того же от других. Такие особенности педантичных людей определяются их стремлением постоянно контролировать ситуацию, попыткам подчинить своей воле независящие от них обстоятельства.

Если поведение педантичной личности не выходит за разумные пределы, то это является преимуществом в деловых вопросах. Основательность, четкость, законченность, добросовестность – вот черты, помогающие в работе педантичному человеку. Педантическая скрупулезность часто выражается не только в высоких деловых качествах, но в усиленной заботе о своем здоровье. При умеренном проявлении это положительное качество. Педантичный человек осторожен, не употребляет или мало употребляет алкоголь, не курит.

Педантичность может проявляться не во всех сферах (например, мужчина может заботу о порядке в доме «отдавать на откуп жене», как более компетентной).
    </string>

    <string name="demonstrativeness">Общительный и обходительный человек. Проявляет артистичность, неординарность в мышлении и поступках, стремится ко всему яркому, нестандартному. Отличается способностью к самовнушению, и как следствие, – умением оказывать влияние на окружающих, в том числе вызывать расположение и доверие к себе.

Легко устанавливает контакт, стремится к лидерству. Умеет видеть и получать собственные преимущества в самых неблагоприятных условиях. Отличается склонностью к интригам при внешней мягкости общения.

Для демонстративного человека характерны такие чувства как зависть и ревность. Чужой успех он часто расценивает как собственную неудачу. При этом может обвинять окружающих в том, что его недооценили. Может раздражать окружающих своей самоуверенностью, высоким уровнем притязаний. Систематически провоцирует конфликты, при этом активно защищается.

Демонстративной личности необходимо внимание всех окружающих, которое она стремится получить любой ценой. Один из наиболее распространенных способов добиться внимания состоит в блестящей презентации себя и своих способностей (независимо от реального уровня их развития). Даже если в учебном заведении успехи такого человека скромны, обладая хорошей памятью, он может подготовиться к экзаменам и произвести нужное впечатление на экзаменатора.
    </string>

</resources>